--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: vifernan <vifernan@student.42.fr>          +#+  +:+       +#+         #
+#    By: antville <antville@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2021/04/08 19:55:57 by vifernan          #+#    #+#              #
-#    Updated: 2021/08/19 17:50:24 by vifernan         ###   ########.fr        #
+#    Created: 2021/04/08 19:55:57 by antville          #+#    #+#              #
+#    Updated: 2021/08/19 17:50:24 by antville         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
