--- a/ft_printf/libft/Makefile
+++ b/ft_printf/libft/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: vifernan <marvin@42.fr>                    +#+  +:+       +#+         #
+#    By: antville <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2021/04/08 19:55:57 by vifernan          #+#    #+#              #
-#    Updated: 2021/04/30 12:43:45 by vifernan         ###   ########.fr        #
+#    Created: 2021/04/08 19:55:57 by antville          #+#    #+#              #
+#    Updated: 2021/04/30 12:43:45 by antville         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
