--- a/minishell/Makefile
+++ b/minishell/Makefile
@@ -3,13 +3,12 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: antville <antville@student.42.fr>          +#+  +:+       +#+         #
+#    By: dpoveda- <me@izenynn.com>                  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2024/01/02 13:04:58 by antville          #+#    #+#              #
-#    Updated: 2024/01/02 13:04:58 by antville         ###   ########.fr        #
+#    Created: 2021/11/20 13:15:01 by dpoveda-          #+#    #+#              #
+#   Updated: 2021/12/16 21:34:38 by                  ###   ########.fr       # #
 #                                                                              #
 # **************************************************************************** #
-
 
 # **************************************************************************** #
 #                                     VARS                                     #
