--- a/minishell/libft/Makefile
+++ b/minishell/libft/Makefile
@@ -3,12 +3,13 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: ldurante <ldurante@student.42.fr>          +#+  +:+       +#+         #
+#    By: antville <antville@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2021/04/06 16:59:01 by ldurante          #+#    #+#              #
-#    Updated: 2022/01/20 02:35:42 by ldurante         ###   ########.fr        #
+#    Created: 2024/01/03 15:32:48 by antville          #+#    #+#              #
+#    Updated: 2024/01/03 15:32:48 by antville         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
+
 
 # VARIABLE DECLARATIONS #
 
